# InstaCanonBot

./: .gitignore  create_user_in_db.py  file_manager.py  follow_routine.py  get_another_profile_followers_routine.py  main.py  models.py  my_profile_numbers.py  post.py  pyproject.toml  unfollow_routine.py
components/: actions_meter.py  browser.py  check_in.py  dismiss.py  faker.py  login.py  reporter.py  scrapper.py  scroll.py  search.py
components/navegation/: dismiss.py  login.py  scrapper.py  scroll.py
jobs/: check_in.py  follow.py  my_profile.py  profiles_scrapper.py  unfollow.py
