[tool.poetry]
name = "instagram"
version = "0.1.0"
description = ""
authors = ["Alceu-wv <alceu.wv@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.1.3"
loguru = "^0.6.0"
pysqlite3 = "^0.4.7"
SQLAlchemy = "^1.4.35"
sqlalchemy-json = "^0.5.0"
arrow = "^1.2.2"
pip = "^22.1"
install = "^1.3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
my-project = "instagram.main:run"
